# AdaParse

./: README.md  README_Nougat_Aurora_XPU.md  pyproject.toml
adaparse/: convert.py
adaparse/parsers/: __init__.py  nougat.py
configs/nougat/: aurora_next_eval_2nodes.yaml  aurora_prod_128nodes.yaml  aurora_prod_512nodes.yaml
scripts/: nougat_smoke.py  standup_aurora.sh
tests/: conftest.py  test_nougat_smoke_env.py
